--- a/poofties.html
+++ b/poofties.html
@@ -558,10 +558,10 @@ function getPosition(el) {
 
 <div style="position:absolute; left:10%; right:10%; line-height: 12px;">
 <center>
-<sub><sub><img src="https://i.imgur.com/ricmdVE.gif"/></sub></sub>　<font color="#af9595">poofties</font>　<sub><sub><img src="https://i.imgur.com/ricmdVE.gif"/></sub></sub>
-<br><br>
-<font color="#d8abab">- ぷふち -</font></font><br><br>
-<img src="https://i.imgur.com/cPrCMJQ.gif"/>
+<sub><sub><img width="auto" height="20px" src="https://i.imgur.com/xwtqxd7.png"/></sub></sub> <font color="#b39a9c">poofties</font> <sub><sub><img width="auto" height="20px" src="https://i.imgur.com/k7cuboS.png"/></sub></sub>
+<br>
+<font color="#cfb6b8">꒰ ﾌ̊ﾌﾁ ꒱</font><br>
+<img width="auto" height="25px" src="https://i.imgur.com/jqGBSbi.png"/>
 <br><br>
 <font style="font-size: 8px;" color="#bcabab">
 welcome to my imagination. poofties are all the critters that i've created, poofti is the world where they live in.<br>
@@ -569,10 +569,10 @@ in this world i received the "middlepot" (sur)name, but i'm usually called "puf"
 <br>
 in this page you can ..<br><br></font>
 
-<sub><sub><img src="https://i.imgur.com/GPaxwqF.gif"/></sub></sub>　<a href="/stories" id="linkbjinho" style="text-decoration: none;"><font color="#c9a89b">watch the episodes</a></font><br><br>
-<a href="/milkywoods" id="linkbjinho" style="text-decoration: none;"><font color="#d8abab">play little games</font></a>　<sub><sub><img src="https://i.imgur.com/sCzFf2t.gif"/></sub></sub><br><br>
-<sub><sub><img src="https://i.imgur.com/u4wRgUy.gif"/></sub></sub>　<a href="/notes" id="linkbjinho" style="text-decoration: none;"><font color="#c9a89b">read potato's notes</font></a><br><br>
-<a href="/tinyjournal" id="linkbjinho" style="text-decoration: none;"><font color="#d8abab">read random texts</a></font>　<sub><sub><img src="https://i.imgur.com/VCZvIIU.gif"/></sub></sub><br>
+<sub><sub><sub><img width="auto" height="23px" src="https://i.imgur.com/FcP2tbk.png"/></sub></sub></sub> ‌ ‌ <a href="/milkywoods" id="linkbjinho" style="text-decoration: none;"><font color="#c9abb0">play little games</a></font><br><br>
+<a href="/stories" id="linkbjinho" style="text-decoration: none;"><font color="#cfb4b8">watch the episodes</font></a> ‌ ‌ <sub><sub><sub><img width="auto" height="23px" src="https://i.imgur.com/GoorTKV.png"/></sub></sub></sub><br><br>
+<sub><sub><sub><img width="auto" height="23px" src="https://i.imgur.com/pCAcKbw.png"/></sub></sub></sub> ‌ <a href="/notes" id="linkbjinho" style="text-decoration: none;"><font color="#c9abb0">read potato's notes</font></a><br><br>
+<a href="/tinyjournal" id="linkbjinho" style="text-decoration: none;"><font color="#cfb4b8">read random texts</a></font> ‌ ‌<sub><sub><sub><img width="auto" height="23px" src="https://i.imgur.com/zrlm8Ti.png"/></sub></sub></sub><br>
 
 <br><br><br>
 
@@ -580,7 +580,7 @@ in this page you can ..<br><br></font>
 <br>
 </center>
 <center>
-<font color="#c69d8d">꒰</font>　<font color="#af9595">backstory</font>　<font color="#c69d8d">꒱</font>
+<sub><sub><img width="auto" height="20px" src="https://i.imgur.com/kWo8Rw2.png"/></sub></sub> <font color="#af9595">backstory</font> <sub><sub><img width="auto" height="20px" src="https://i.imgur.com/jjOLvRo.png"/></sub></sub>
 </center><br><br>
 <font style="font-size: 8px;" color="#bf999e">
 
