--- a/stories.html
+++ b/stories.html
@@ -443,7 +443,7 @@ z-index: 3;
 
 <center>
 <sub><sub><img src="https://i.imgur.com/crKdlH8.png"/></sub></sub><font color="#a38e94" style="font-size:10px;">　poofties, through her eyes　</font><sub><sub><img src="https://i.imgur.com/crKdlH8.png"/></sub></sub><br><br>
-<font color="#e8c8d2" style="font-size:10px;">( click the preview for watching )</font><br><br><br>
+<font color="#cfb6b8" style="font-size:10px;">( click the preview for watching )</font><br><br><br>
 
 <font color="#b89a9a" style="font-size:10px;">first episode</font><font color="#e6aeae" style="font-size:11px;"> ♡ </font><font color="#b89a9a" style="font-size:10px;">good morning</font><br><br>
 <a href="/i"><img width="360px" height="auto" src="https://i.imgur.com/CIaBxwl.png"/></a><br>
