--- a/portfolio.html
+++ b/portfolio.html
@@ -789,9 +789,7 @@ function resetPlayer() {
 
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> story games / templates<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/mNmqyU6.gif"><br><br>
-<img width="400px" height="auto" src="https://i.imgur.com/GOPih9T.png"><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/14gWkDk.png">
+<img width="280px" height="auto" src="https://i.imgur.com/xH8WFa3.gif">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
