--- a/poofties.html
+++ b/poofties.html
@@ -560,7 +560,7 @@ function getPosition(el) {
 <center>
 <sub><sub><img width="auto" height="20px" src="https://i.imgur.com/xwtqxd7.png"/></sub></sub> <font color="#b39a9c">poofties</font> <sub><sub><img width="auto" height="20px" src="https://i.imgur.com/k7cuboS.png"/></sub></sub>
 <br>
-<font color="#cfb6b8">꒰ ﾌ̊ﾌﾁ ꒱</font><br>
+<font color="#cfb6b8">꒰ ﾌﾟﾌﾁ ꒱</font><br>
 <img width="auto" height="25px" src="https://i.imgur.com/jqGBSbi.png"/>
 <br><br>
 <font style="font-size: 8px;" color="#bcabab">
