--- a/recommended.html
+++ b/recommended.html
@@ -456,9 +456,9 @@ z-index: 3;
 <font style="font-size:5px" color="#d8c0ad">.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.·.</font><br><br>
 <br><br><br>
 
-　‌‌<a href="https://allyratworld.neocities.org" target="_blank"><img src="https://i.imgur.com/fTCMebo.png"></a>
+‌‌<a href="https://luupon.carrd.co" target="_blank"><img src="https://i.imgur.com/GKo0nYh.png"></a>
+　<a href="https://allyratworld.neocities.org" target="_blank"><img src="https://i.imgur.com/fTCMebo.png"></a>
 　　<a href="https://birdsandstars.neocities.org" target="_blank"><img src="https://i.imgur.com/gfnwIV7.png"></a>
-　　<a href="https://nef.neocities.org" target="_blank"><img src="https://i.imgur.com/RMLJJZo.gif"></a>
 
 　　‌‌<br><br>　<a href="https://mimkitty.com" target="_blank"><img src="https://i.imgur.com/6W5CjTW.gif"></a>
 　<a href="https://cloudworld.neocities.org" target="_blank"><img src="https://i.imgur.com/MXRItda.gif"></a>
@@ -468,7 +468,7 @@ z-index: 3;
 　<a href="https://www.lejlart.com/apple.html" target="_blank"><img src="https://i.imgur.com/tHRwo5p.gif"></a>
 　<a href="https://candymilk.neocities.org" target="_blank"><img src="https://i.imgur.com/7iYy1hj.gif"></a>
 
-　　‌‌<br><br>　<a href="https://howtobecomeanangel.world" target="_blank"><img src="https://i.imgur.com/cPwWxGS.png"></a>
+　　<br><br><a href="https://nef.neocities.org" target="_blank"><img src="https://i.imgur.com/RMLJJZo.gif"></a>
 　<a href="https://blissnet.neocities.org" target="_blank"><img src="https://i.imgur.com/m3tcSwl.png"></a>
 　<a href="https://cinni.neocities.org" target="_blank"><img src="https://i.imgur.com/LH4PdzU.png"></a>
 
