--- a/status.html
+++ b/status.html
@@ -456,7 +456,7 @@ z-index: 3;
 
 
 <div style="font-family: Verdana; font-size:10px; overflow-y: hidden; position: absolute; width: 150px;height: 100px;overflow-x: hidden; padding-left: 165px; padding-top: 248px; z-index: 20; line-height:8px;"><br><br>
-<br>　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:8px;">feeling</font> : <font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">motivated</font>‌ ‌ ‌<sub><sub><img src="https://i.imgur.com/kK9iEgG.gif"></sub></sub>
+<br>　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:8px;">feeling</font> : <font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">excited</font>‌ ‌ ‌<sub><sub><img src="https://i.imgur.com/kK9iEgG.gif"></sub></sub>
 <br><br>
 　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:8px;">working on</font> : <font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">game design</font><br><br>
 　　　　‌‌　‌‌　 ‌‌<font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 1px; font-size:9px;">graphic editing</font><br><br>
@@ -467,6 +467,9 @@ z-index: 3;
 <div style="padding-left: 163px; padding-top: 130px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; overflow: auto; overflow: scroll; z-index: 30; text-align:justify; line-height: 100%">
 
+　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>24.03.20</sup></font> <font color="#a0acbc">→</font>　so busy !!!
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/9LP84Nr.gif"></sub> <font color="#b7cccc" style="border-bottom:1px dashed #d8c0ad;"><sup>16.02.21</sup></font> <font color="#9cb7b7">→</font>　create with your heart
 
 <br><br><br>
@@ -493,8 +496,6 @@ z-index: 3;
 <br><br><br>
 　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>01.07.20</sup></font> <font color="#c48d8d">→</font>　home sweet home.
 
-<br><br><br>
-　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>24.05.20</sup></font> <font color="#a0acbc">→</font>　loving him forever & ever
 
 </div>
 </div>
