--- a/portfolio.html
+++ b/portfolio.html
@@ -835,16 +835,16 @@ function resetPlayer() {
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> pc & phone customization<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
 <img width="400px" height="auto" src="https://i.imgur.com/ubcAKg9.gif"><br><br>
-<img width="auto" height="350px" src="https://i.imgur.com/FB1yE5M.png"> 
-<img width="auto" height="350px" src="https://i.imgur.com/6QZX0tS.png">
+<img width="auto" height="350px" src="https://i.imgur.com/QmXja0G.png">　
+<img width="auto" height="350px" src="https://i.imgur.com/xSkS9RH.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
 
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> phone case decor<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="auto" height="270px" src="https://i.imgur.com/qgTfLuE.png"> 
-<img width="auto" height="270px" src="https://i.imgur.com/2BIzI62.png">
+<img width="auto" height="300px" src="https://i.imgur.com/UU7Byc5.jpg"> 
+<img width="auto" height="300px" src="https://i.imgur.com/AMuOpEx.jpg">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 
