--- a/archive.html
+++ b/archive.html
@@ -451,6 +451,69 @@ overflow-x:hidden;
 overflow: auto; overflow: scroll;
 font-family: Verdana;">
 
+<br>
+
+
+<center><img src="https://i.imgur.com/ZNlKk3Z.png"/></center><br>
+<font size = 1><font color="#CBBBB1">
+<center>december . 25 . 2020</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><sub><img width="auto" height="25" src="https://i.imgur.com/o3Yyjkv.png"/></sub></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+the xmas spirit is here again, filling us with joy ..
+these last weeks i have worked hard : needle felting and packaging for the shy bunny store, commissioning, making content for my accounts.. i made lots of story games / templates and wallpapers for my instagram account, as a little xmas gift <font color="#d3a5a5" style="font-size:11px;">♡</font>
+in case you don't have the app, everything will be on my <a id="linkbjinho" href="https://care.pooftie.me" target="_blank">self care archive</a>..
+i just added a new section for the wallpapers, since i'll keep making more.
+also, i have been developing the game i will ( hopefully ) release in a few months !
+
+yes, the mobile game i talked about in the past, that i'm making with bubu <font color="#d3a5a5" style="font-size:11px;">♡</font>
+we made a lot of progress and changed some things too.
+i wanted to make it possible for people to play on any device they wanted, so we'll release it for browser !!!
+we're making an exclusive website for the game so you'll be able to login and play wherever you prefer : mobile or pc, of any kind. and since we'll have to pay for a server anyway, why not including some interactions between the players ?
+it certainly made the game a lot better and i'm so excited to see people having fun !!
+this game will not be focused on socializing ( like walking around meeting players and chatting ) but there will be some little things you can do like sending letters to your friends. it's partially an online game.
+i thought about posting some previews of how it's looking like ...
+but i will keep it a surprise, for once <sub><sub><sub><img width="auto" height="25" src="https://i.imgur.com/vqcfDWP.png"/></sub></sub></sub>
+can you guess which kind of drawing style i chose for this game ?
+
+talking on social games, i will make a full online game next year, and i already have lots of ideas !!! we will need more investment for this one so let's see how things go.
+"how about the 'pumpkin pie festival' ?" you must be thinking, after i presented the project and never talked about it again.. good news : we are not giving up on it, it just took me literal years to finally come up with a way of presenting the story, i had many ideas but none was good enough ; should i focus on storytelling or game mechanics ? or both ?
+the characters i created are really special to me and i didn't want to waste such a cute story, but now after multiple times rethinking the whole thing i'm finally sure of what i'm making !!
+this particular story will be part of a bigger thing, where i'll also include other little thematic stories from the fluffies.
+i expect it to be released next year as well, but it really depends on how much time we'll need !
+well i must focus on one big project at once or i will never get to finish anything .. be patient please <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+
+so today i don't have much i could show here, but well, this morning i just finished coloring and editing ( inspired on myself ) :
+</pre>
+<br><br>
+
+<center><img width="380px" height="auto" src="https://i.imgur.com/3tWbz7w.png"/></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+for this one i tried applying more textures & details.. what do you think ?
+after talking so much about my recent projects i wanted to remind you that simply doing things that makes us happy is important. not everything is about prestige, success, or revenue.
+if you do things with your heart, it is worth your time and effort !
+of course you will need to prioritize some things and we all need money to survive, but don't give up on the little things that bring you happiness.
+let's try our best to take a little time of our days to "play around" freely, because we deserve it <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i wish you all a very berry merry xmas <sub><sub><img width="auto" height="20" src="https://i.imgur.com/AlNyAdf.png"/></sub></sub>
+</pre><br><br><br>
+
+<center><img width="300px" height="auto" src="https://i.imgur.com/WLygFj5.png"/></center><br>
+
+xoxo <sub><sub><sub><sub><sub><img width="auto" height="35" src="https://i.imgur.com/LiVvfl9.png"/></sub></sub></sub></sub></sub>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/ZNlKk3Z.png"/></center>
+
+<br><br><br>
 
 <br>
 
