--- a/blog.html
+++ b/blog.html
@@ -454,6 +454,124 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img width="auto" height="35px" src="https://i.imgur.com/9wmSDgu.png"/><img width="auto" height="35px" src="https://i.imgur.com/9wmSDgu.png"/><img width="auto" height="35px" src="https://i.imgur.com/9wmSDgu.png"/><img width="auto" height="35px" src="https://i.imgur.com/9wmSDgu.png"/><img width="auto" height="35px" src="https://i.imgur.com/9wmSDgu.png"/><img width="auto" height="35px" src="https://i.imgur.com/9wmSDgu.png"/><img width="auto" height="35px" src="https://i.imgur.com/9wmSDgu.png"/></center><br>
+<font size = 1><font color="#CBBBB1">
+<center>march . 26 . 2021</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><sub><img src="https://i.imgur.com/GeAMq2A.gif"/></sub></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i hope you're taking care, and doing your best to stay home & safe !!
+i'm working so much on my new game lately sometimes i forget to take basic care, like eating or sleeping properly.. but i'm trying my best !! i really wanted to finish it on april, but making an online game is harder than we expected !
+i also had more and more ideas while developing, so things got a bit more complex, and expensive. we'll need one more month, but other than that i'm really really happy with the progress <font color="#d3a5a5" style="font-size:11px;">♡</font>
+most of the art is already done, but i'm keeping it a secret for a little more ..
+please bear with me <sub><img src="https://i.imgur.com/2wgHNFc.gif"/></sub>
+i want to post a proper preview video of it, as you deserve !!
+
+before showing you other things i did, i wanted to thank you once again for your neverending kindness !! <font color="#d3a5a5" style="font-size:11px;">♡</font>
+all my line themes & emojis got on the "popular" sections on the creators' market, which made me SO happy !!!
+i had low expectations on these, since ( at least where i live ) this app is not well-known, but you fluffies never let me down <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+
+i decided to customize my phone with my drawings, and make a new case too :
+</pre>
+<br><br>
+
+<center><img width="250px" height="auto" src="https://i.imgur.com/FwFTZKx.jpg"/>
+<br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/ziaHeCZ.jpg"/>
+<img width="200px" height="auto" src="https://i.imgur.com/m7sIqIY.jpg"/></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i really like making my phone cute, even though it takes some time to get used to the new icons .. <sub><sub><img src="https://i.imgur.com/IhuIFLl.gif"/></sub></sub>
+if you're wondering how i customize my phone, please check out the /faq page !!
+
+talking on drawings, i wanted to show you today that absolutely lovely puf fanart that i received from <a id="linkbjinho" href="https://www.instagram.com/luu_pon/" target="_blank">luupon</a> :
+</pre>
+
+<center><img width="220px" height="auto" src="https://i.imgur.com/J7YlzzK.png"/></center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+that made me smile so much, i can't put into words how grateful i feel !!
+i love her soft art, she's really kind and talented. make sure to check her out <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+since the poofties project is getting more recognition ( yay !! ) from now on i'll try to post my favorite fanarts here, and link the artists. 
+i have another puf fanart saved, that i received from <a id="linkbjinho" href="https://www.instagram.com/thebabydollsheart/" target="_blank">thebabydollsheart</a> last year !
+i'm very late, but i'll take the chance to show it anyway,,
+i edited and recolored this one digitally, just to enhance the colors a bit :
+</pre>
+<br>
+
+<center><img width="370px" height="auto" src="https://i.imgur.com/EFCGs0S.png"/></center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+you might remember that i have colored two more drawings from her exactly one year ago. by then, her account was "baby.doll.heart" !
+i love her delicate style, and she's also a wonderful person. <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+and recently i also commissioned a drawing of myself from <a id="linkbjinho" href="https://www.instagram.com/lambmaid/" target="_blank">lambmaid</a> !
+she's incredibly creative and always creating new characters. two years ago she made a few girls inspired by my outfit images ( <a id="linkbjinho" href="https://middlepot.com/img/lambmaid.jpg" target="_blank">here</a> ) .. such an honor !!
+i have been following her work for years now. <font color="#d3a5a5" style="font-size:11px;">♡</font>
+this is the commissioned drawing, colored :
+</pre>
+<br>
+
+<center><img width="320px" height="auto" src="https://i.imgur.com/VI1k0Mb.png"/></center>
+<br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i absolutely love the results, it's a very soft piece ..
+do you recognize this dress and the flower hairpin ? heh
+fun fact : i'm wearing them today !
+
+i don't usually commission drawings, since i don't have a place where i would use them, i rather buy specific products with people's characters ( specially stationery )
+but i really really wanted to support lambmaid for such a long time, so the day she opened commissions i had this idea of commissioning a drawing i could color !!
+you know i love coloring, and i'm always searching for new coloring pages, but it's hard to find cute ones <sub><img src="https://i.imgur.com/f6mkK0N.gif"/></sub>
+so i think that would be a good way to support more artists from now on ( if they agree with the idea, of course )
+i feel incredibly happy to have met so many lovely artists - and people - over the years, i have so much to be thankful for. i want to do my best for them, to show my support, and work hard to inspire them too !!
+
+for finishing the post, i have a little text i thought was important to write, to clarify a few things :
+</pre>
+<br>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
+<br>
+<pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">i have received messages from time to time through these years asking for the name of my personal aesthetic, and particularly recently i have been questioned about making a name for it, for its growing popularity.. but making up labels to describe everything, is that really necessary ?
+i find it kinda funny that nowadays people are so invested in making specific names for visuals. when i started using tumblr, people would just use adjectives to describe images, or the name of the person who posted it. what do you see, what do you think, what do you feel when you see my content ? those words should be enough.
+my main aesthetic is simply my aesthetic, based on my beliefs and motifs that i like. that is why you can't find exactly the same kind of content i do so easily, unless you search for my name ( middlepot / pooftie ). i feel happy when people give me credits for the aesthetic when getting inspiration directly on my content, but i want to make it clear that although the specific concepts of it were made up by me, i am not the first person to ever take pictures the way i do. keep in mind that i only take credits for my own works and thoughts, not for lace ribbons and stuffies, okay ?
+to clarify : i don't mind having my images reposted, no credits needed ( just please don't claim you own them ), but i absolutely appreciate it more when people credit me properly. if you do, please write either "middlepot" or "pooftie" on it and don't try to label my personal works and beliefs without my permission. if it is my content it's not only aesthetic, and i prefer having people coming to my website to find more, if they like !
+in my opinion, simply crediting people who inspire you by using their own names + adding a few motifs or adjectives as tags is a way better way of organizing aesthetics on internet as a whole. although it might seem like aesthetic names are a consensus, they aren't. you won't be able to find lots of relevant content if you rely solely on those words, because not everyone is actually willing to use them. not all creators are on tumblr, pinterest or even speak english.
+we are human beings, and can't be labeled that easily. you can know multiple people who like similar things, but each one of them are different anyway. i understand that it can be more convenient to search for specific tags to find content you want to see, but i don't feel comfortable making up an "aesthetic name" for my life, my appearance, my particular way of living and doing things .. i am simply myself, and i like the things i like.
+there are multiple "properly categorized" aesthetics that i am very fond of, such as angelcore, babycore, dollcore, cottagecore and webcore ; but of course you won't be able to find images exactly like the ones i make, draw, edit, choose to save on my pc, or even reblog on my tumblr blog unless you straight up search for my name. if you like someone's content, it's better to just ask or search for their inspirations instead of making up tags that only a few people will use actively. on tumblr you can easily check the sources from the posts !
+i have been inspired by many wonderful people over the years, and that's why i am here now, with my own aesthetic. the visuals might be actually very similar to others, but the feeling always vary from person to person. when posting my content i want to make you feel specific emotions ( comfort & safety ), that other person who also likes frilly dresses and teddy bears might not relate to, when creating their own content. finding different people's ideas coming from similar visuals is very refreshing, and inspiring !! let's embrace and respect those differences.
+i believe everyone has their own particular aesthetic, so don't rely completely on labels to choose what you should wear, which music you should listen to, how you should make art and please : don't rely on it for how you should look or act like. respect your particularities and be purely yourself ♡
+it's okay to search for specific aesthetic names to just explore the possibilities, but at some point you will naturally feel left out of them, for now understand yourself to the point of not being able to relate 100% to concepts created by others. there is no need to worry if your personal aesthetic is different from what you find out there. ♡
+</pre>
+
+<br><br>
+if you really got your precious time to read my huge texts, i hope my words can help or inspire you in some way !! i wish you fluffies everything good ..
+<br><br>
+
+xoxo <sub><sub><img src="https://i.imgur.com/2SYzLEe.gif"/></sub></sub></sub>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img width="auto" height="35px" src="https://i.imgur.com/9wmSDgu.png"/><img width="auto" height="35px" src="https://i.imgur.com/9wmSDgu.png"/><img width="auto" height="35px" src="https://i.imgur.com/9wmSDgu.png"/><img width="auto" height="35px" src="https://i.imgur.com/9wmSDgu.png"/><img width="auto" height="35px" src="https://i.imgur.com/9wmSDgu.png"/><img width="auto" height="35px" src="https://i.imgur.com/9wmSDgu.png"/><img width="auto" height="35px" src="https://i.imgur.com/9wmSDgu.png"/></center>
+
+<br><br><br>
+
 <center><img width="auto" height="35px" src="https://i.imgur.com/FrWxQTW.png"/></center><br>
 <font size = 1><font color="#CBBBB1">
 <center>february . 25 . 2021</center>
@@ -640,66 +758,6 @@ xoxo <sub><sub><img src="https://i.imgur.com/qbbeIm2.gif"/></sub></sub></sub>
 
 <br><br><br>
 
-<center><img src="https://i.imgur.com/ZNlKk3Z.png"/></center><br>
-<font size = 1><font color="#CBBBB1">
-<center>december . 25 . 2020</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hiii fluffies <sub><sub><img width="auto" height="25" src="https://i.imgur.com/o3Yyjkv.png"/></sub></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-the xmas spirit is here again, filling us with joy ..
-these last weeks i have worked hard : needle felting and packaging for the shy bunny store, commissioning, making content for my accounts.. i made lots of story games / templates and wallpapers for my instagram account, as a little xmas gift <font color="#d3a5a5" style="font-size:11px;">♡</font>
-in case you don't have the app, everything will be on my <a id="linkbjinho" href="https://care.pooftie.me" target="_blank">self care archive</a>..
-i just added a new section for the wallpapers, since i'll keep making more.
-also, i have been developing the game i will ( hopefully ) release in a few months !
-
-yes, the mobile game i talked about in the past, that i'm making with bubu <font color="#d3a5a5" style="font-size:11px;">♡</font>
-we made a lot of progress and changed some things too.
-i wanted to make it possible for people to play on any device they wanted, so we'll release it for browser !!!
-we're making an exclusive website for the game so you'll be able to login and play wherever you prefer : mobile or pc, of any kind. and since we'll have to pay for a server anyway, why not including some interactions between the players ?
-it certainly made the game a lot better and i'm so excited to see people having fun !!
-this game will not be focused on socializing ( like walking around meeting players and chatting ) but there will be some little things you can do like sending letters to your friends. it's partially an online game.
-i thought about posting some previews of how it's looking like ...
-but i will keep it a surprise, for once <sub><sub><sub><img width="auto" height="25" src="https://i.imgur.com/vqcfDWP.png"/></sub></sub></sub>
-can you guess which kind of drawing style i chose for this game ?
-
-talking on social games, i will make a full online game next year, and i already have lots of ideas !!! we will need more investment for this one so let's see how things go.
-"how about the 'pumpkin pie festival' ?" you must be thinking, after i presented the project and never talked about it again.. good news : we are not giving up on it, it just took me literal years to finally come up with a way of presenting the story, i had many ideas but none was good enough ; should i focus on storytelling or game mechanics ? or both ?
-the characters i created are really special to me and i didn't want to waste such a cute story, but now after multiple times rethinking the whole thing i'm finally sure of what i'm making !!
-this particular story will be part of a bigger thing, where i'll also include other little thematic stories from the fluffies.
-i expect it to be released next year as well, but it really depends on how much time we'll need !
-well i must focus on one big project at once or i will never get to finish anything .. be patient please <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
-
-so today i don't have much i could show here, but well, this morning i just finished coloring and editing ( inspired on myself ) :
-</pre>
-<br><br>
-
-<center><img width="380px" height="auto" src="https://i.imgur.com/3tWbz7w.png"/></center>
-<br>
-
-</font></font></font>
-
-<font size = 1><font color="#B1A69E">
-<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
-for this one i tried applying more textures & details.. what do you think ?
-after talking so much about my recent projects i wanted to remind you that simply doing things that makes us happy is important. not everything is about prestige, success, or revenue.
-if you do things with your heart, it is worth your time and effort !
-of course you will need to prioritize some things and we all need money to survive, but don't give up on the little things that bring you happiness.
-let's try our best to take a little time of our days to "play around" freely, because we deserve it <font color="#d3a5a5" style="font-size:11px;">♡</font>
-i wish you all a very berry merry xmas <sub><sub><img width="auto" height="20" src="https://i.imgur.com/AlNyAdf.png"/></sub></sub>
-</pre><br><br><br>
-
-<center><img width="300px" height="auto" src="https://i.imgur.com/WLygFj5.png"/></center><br>
-
-xoxo <sub><sub><sub><sub><sub><img width="auto" height="35" src="https://i.imgur.com/LiVvfl9.png"/></sub></sub></sub></sub></sub>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img src="https://i.imgur.com/ZNlKk3Z.png"/></center>
-
-<br><br><br>
 
 
 
