--- a/blog.html
+++ b/blog.html
@@ -520,7 +520,7 @@ i love her delicate style, and she's also a wonderful person. <font color="#d3a5
 and recently i also commissioned a drawing of myself from <a id="linkbjinho" href="https://www.instagram.com/lambmaid/" target="_blank">lambmaid</a> !
 she's incredibly creative and always creating new characters. two years ago she made a few girls inspired by my outfit images ( <a id="linkbjinho" href="https://middlepot.com/img/lambmaid.jpg" target="_blank">here</a> ) .. such an honor !!
 i have been following her work for years now. <font color="#d3a5a5" style="font-size:11px;">♡</font>
-this is the commissioned drawing, colored :
+this is the commissioned drawing, that i colored & edited :
 </pre>
 <br>
 
