--- a/links.html
+++ b/links.html
@@ -454,11 +454,11 @@ z-index: 3;
 <br>
 <sub><sub><sub><img width="auto" height="25px" src="https://i.imgur.com/AZjYJOQ.png"></sub></sub></sub><font color="#b89c9f"> chat apps :</font><br>
 <br>
-　<font color="#7a6b6b">line </font><a id="eee" title="add link" href="https://line.me/ti/p/~pooftie" target="_blank" >♡</a>　<font color="#7a6b6b">dscrd </font><a id="eee" title="add server" href="https://dsc.gg/pooftie" target="_blank" >♡</a><br>
+　<font color="#7a6b6b">line </font><a id="eee" title="friend req" href="https://line.me/ti/p/~pooftie" target="_blank" >♡</a>　<font color="#7a6b6b">dscrd </font><a id="eee" title="server inv" href="https://dsc.gg/pooftie" target="_blank" >♡</a><br>
 <br>
 <sub><sub><sub><img width="auto" height="25px" src="https://i.imgur.com/DWrloPs.png"></sub></sub></sub><font color="#b89c9f"> gamedev :</font><br>
 <br>
-<font color="#7a6b6b">steam </font><a id="eee" href="https://s.team/u/middlepot" target="_blank" >♡</a>　<font color="#7a6b6b">itch </font><a id="eee" href="https://middlepot.itch.io" target="_blank" >♡</a>　<font color="#7a6b6b">gj </font><a id="eee" href="https://middlepot.gamejolt.io" target="_blank" >♡</a><br>
+　<font color="#7a6b6b">steam </font><a id="eee" title="pc platform" href="https://s.team/u/middlepot" target="_blank" >♡</a>　<font color="#7a6b6b">play </font><a id="eee" title="android platform" href="https://play.google.com/store/apps/dev?id=6235261695333627392" target="_blank" >♡</a><br>
 </div>
 
 <div style="position:relative; top:5; float:right; overflow:hidden; border: 15px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round; width: 115px; height: 200px; overflow-x:hidden; line-height:13px; padding:5px;">
