--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@ z-index: 3;
 
 <font family = "Verdana"><font style="font-size:8px;"><font color="#d8c0ad">( </font><font color="#efb8b8">♡</font><a id="linkzinho" href="https://ko-fi.com/middlepot" target="_blank"><font color="#b7a596"> buy me a coffee </font></a><font color="#efb8b8">♡</font><font color="#d8c0ad"> )</font></font></font>
 <br><br>
-<font family = "Verdana"><font style="font-size:8px;"><font color="#d8c0ad">( </font><font color="#efb8b8">♡</font><a id="linkzinho" href="/commissions"><font color="#c48f8f"> want a similar website ? click here </font></a><font color="#efb8b8">♡</font><font color="#d8c0ad"> )</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#d8c0ad">( </font><font color="#efb8b8">♡</font><a id="linkzinho" href="/commissions"><font color="#c48f8f"> website commissions here </font></a><font color="#efb8b8">♡</font><font color="#d8c0ad"> )</font></font></font>
 <br><br>
 <font family = "Verdana"><font style="font-size:8px;"><font color="#d8c0ad">( </font><font color="#efb8b8">♡</font><a id="linkzinho" href="https://shybunny.middlepot.com" target="_blank"><font color="#c9a5a5"> visit my online store </font></a><font color="#efb8b8">♡</font><font color="#d8c0ad"> )</font></font></font>
 
