--- a/milkywoods.html
+++ b/milkywoods.html
@@ -564,22 +564,23 @@ function getPosition(el) {
 <font style="font-size: 8px;" color="#b38d94">
 <sub><sub><img width="auto" height="20px" src="https://i.imgur.com/OMOtqoa.png"/></sub></sub> ‌my released games ( outside links ) :
 <br><br>
+
 <div style="width:240px; padding:2px; border: 20px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round;">
 <a href="https://picrew.me/image_maker/619666" target="_blank"><img width="230px" height="auto" src="https://i.imgur.com/NwfY8KN.png"/></a>
 <br><br>
 <center>
-<a style="text-decoration:none;" href="https://picrew.me/image_maker/619666" target="_blank"><font style="font-size:9px" color="#c7a9ad">picrew dress up</font></a>
+<a style="text-decoration:none;" href="https://picrew.me/image_maker/619666" target="_blank"><font style="font-size:9px" color="#c7a9ad">picrew.me</font></a>
 </font>
 <br>
 <font style="font-size:9px" color="#d6c1c4">
-︶︶︶︶︶︶︶︶</font></center>
+︶︶︶︶︶︶</font></center>
 </font>
 </div>
 
 
 <br><br>
 <font style="font-size: 8px;" color="#b38d94">
-<sub><sub><img width="auto" height="20px" src="https://i.imgur.com/OMOtqoa.png"/></sub></sub> ‌my html games ( pc & mobile ) :</font>
+<sub><sub><img width="auto" height="20px" src="https://i.imgur.com/OMOtqoa.png"/></sub></sub> ‌my small html games :</font>
 <br><br>
 <div style="width:320px; padding:2px; border: 20px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round;">
 
@@ -592,7 +593,7 @@ function getPosition(el) {
 
 <br><br>
 <font style="font-size: 8px;" color="#b38d94">
-<sub><sub><img width="auto" height="20px" src="https://i.imgur.com/OMOtqoa.png"/></sub></sub> ‌my flash games ( pc only ) :
+<sub><sub><img width="auto" height="20px" src="https://i.imgur.com/OMOtqoa.png"/></sub></sub> ‌my early flash games :
 <br><br>
 <div style="width:310px; padding:2px; border: 20px solid transparent; border-image: url(https://i.imgur.com/sYxacdk.png) 30 round;">
 <a href="https://file.pooftie.me/r/flash%20games.rar" target="_blank"><img src="https://i.imgur.com/BltA2XT.gif"/></a>
@@ -602,7 +603,7 @@ function getPosition(el) {
 </font>
 <br>
 <font style="font-size:9px" color="#d6c1c4">
-︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶</font></center>
+︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶︶</font></center>
 </div>
 <br><br><br><br>
 
