--- a/fashion.html
+++ b/fashion.html
@@ -611,7 +611,7 @@ p { margin: 0; }
 <br>
 
 <br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/VRxbYzR.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/5sdbi6P.jpg"/><br><br>
 <br>
 
 <br><br><br>
@@ -619,7 +619,7 @@ p { margin: 0; }
 <br>
 
 <br><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/6xswFvY.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/fnHgdI1.jpg"/><br><br>
 <br>
 
 <br><br><br>
@@ -640,6 +640,11 @@ p { margin: 0; }
 
 <br><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/DlOtIv2.png"/><br><br>
+<br>
+
+
+<br><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/BBUrEUU.jpg"/><br><br>
 <br>
 
 <br><br><br>
