--- a/gaming.html
+++ b/gaming.html
@@ -712,8 +712,8 @@ cutest baby there is.<br>
 <font color="#a8958d">　<b>transformice</b><br>
 　　　community : international<br><br><br>
 
-<div style="position:relative; left:7%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border: 20px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 330px; height: 150px; line-height:10px; padding:5px;">
-<img id="fluffy" style="width:105px; height:auto; position:absolute; left:7px; top:25px;" src="https://i.imgur.com/XCScYag.png">
+<div style="position:relative; left:7%; overflow:hidden; background-color:rgb(255, 255, 255, 0.3); border: 20px solid transparent; border-image: url(https://i.imgur.com/fEEVmBa.png) 30 round; width: 330px; height: 180px; line-height:10px; padding:5px;">
+<img id="fluffy" style="width:105px; height:auto; position:absolute; left:7px; top:35px;" src="https://i.imgur.com/XCScYag.png">
 
         <script type = "text/javascript">
             var image3 = document.getElementById("fluffy");
@@ -732,15 +732,15 @@ cutest baby there is.<br>
 
 <font color="#a37c81" style="position:absolute; left:115px; top:3px; font-size:8px;">
 <sub><img width="auto" height="20px" src="https://i.imgur.com/Se1Diyp.png"></sub> ‌<b>fluff</b>#3583<font style="line-height:23px;"><br></font>
-　<font color="#b89196">level :</font> 43<br>
-　<font color="#b89196">fav mode :</font> vanilla<br>
-　<font color="#b89196">fav title :</font> little bell<br>
-　<font color="#b89196" style="line-height:5px;">fav orb : <sub><sub><img width="auto" height="15px" src="https://i.imgur.com/Szu5Z8a.png"></sub></sub><br>
+　<font color="#b89196">level :</font> 48<br>
+　<font color="#b89196">fav mode :</font> normal<br>
+　<font color="#b89196">fav title :</font> fiancée<br>
+　<font color="#b89196" style="line-height:5px;">fav orb : <sub><sub><sub><img width="auto" height="25px" src="https://i.imgur.com/9sEBAGc.png"></sub></sub></sub><br>
 <br></font>
  ‌ <sub><sub><img width="auto" height="20px" src="https://i.imgur.com/6QZYFsf.png"></sub></sub> ‌ <b>skill tree :</b><font style="line-height:20px;"><br></font>
-　<font color="#b89196">spiritual guide [31]</font><br>
-　<font color="#b89196" style="line-height:5px;">wind master [11]<br><br></font>
-　<font color="#b89196">items :</font> ‌ <sub><img width="auto" height="30px" src="https://i.imgur.com/ODOYLJa.png"></sub><br></font>
+　<font color="#b89196">spiritual guide [24]</font><br>
+　<font color="#b89196" style="line-height:5px;">wind master [23]<br><br></font>
+　<font color="#b89196">items :</font> ‌ <sub><img width="auto" height="50px" src="https://i.imgur.com/sqZme20.png"></sub><br></font>
 
 <font color="#a37c81" style="position:absolute; left:215px; top:7px; font-size:8px;">
 　<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/i5J84sF.png"></sub></sub> <b>progress titles :</b><br>
@@ -775,14 +775,30 @@ cutest baby there is.<br>
  ‌ • The Reaper<br>
  ‌ • Cheese Finder<br>
  ‌ • Cheese Knight<br>
+ ‌ • Cheesegrubber<br>
+ ‌ • Fatty<br>
+ ‌ • Stout Mouse<br>
  ‌ • Nice Mouse<br>
  ‌ • Adorable Mouse<br>
  ‌ • Charming Mouse<br>
  ‌ • Pretty Mouse<br>
  ‌ • Cute Mouse<br>
  ‌ • Frivolous Mouse<br>
+ ‌ • Nice Mouse<br>
+ ‌ • Adorable Mouse<br>
+ ‌ • Charming Mouse<br>
+ ‌ • Pretty Mouse<br>
+ ‌ • Cute Mouse<br>
+ ‌ • Frivolous Mouse<br>
+ ‌ • Snob Mouse<br>
+ ‌ • Stylish Mouse<br>
+ ‌ • Actress Mouse<br>
  ‌ • Generous<br>
+ ‌ • Fiancée<br>
+ ‌ • Snowball<br>
  ‌ • Cookies Eater<br>
+ ‌ • Cookies Eater<br>
+ ‌ • I Cheese You<br>
  ‌ • Trick or Treat<br>
  ‌ • Ghostbuster<br>
  ‌ • Scooby-Doo<br>
