--- a/status.html
+++ b/status.html
@@ -467,7 +467,10 @@ z-index: 3;
 <div style="padding-left: 163px; padding-top: 130px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; overflow: auto; overflow: scroll; z-index: 30; text-align:justify; line-height: 100%">
 
-　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>24.03.20</sup></font> <font color="#a0acbc">→</font>　so busy !!!
+　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>18.04.21</sup></font> <font color="#c48d8d">→</font>　working on dreams
+
+<br><br><br>
+　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>24.03.21</sup></font> <font color="#a0acbc">→</font>　so busy !!!
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/9LP84Nr.gif"></sub> <font color="#b7cccc" style="border-bottom:1px dashed #d8c0ad;"><sup>16.02.21</sup></font> <font color="#9cb7b7">→</font>　create with your heart
@@ -493,8 +496,6 @@ z-index: 3;
 <br><br><br>
 　<sub><img src="https://i.imgur.com/pV6N95R.gif"></sub> <font color="#e0c5f1" style="border-bottom:1px dashed #d8c0ad;"><sup>24.07.20</sup></font> <font color="#bea5ce">→</font>　a pure heart  ༘♡
 
-<br><br><br>
-　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>01.07.20</sup></font> <font color="#c48d8d">→</font>　home sweet home.
 
 
 </div>
